Crash on Render Animation (Geometry Nodes) #86966

Closed
opened 2021-03-26 18:22:51 +01:00 by James Searle · 3 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-26 01:28, hash: 758c2210ae
Worked: Unknown

Short description of error
Blender crashes when rendering animation from geometry nodes on the attached .blend file.

Exact steps for others to reproduce the error
*Open attached .blend file.
*Render Animation

This file uses geometry nodes to take a grid of points and translate them using the Mandelbulb formula with an increasing N driven by the frame number.

When I try to render animation, it consistently crashes after a few frames.
Playback in the viewport and rendering an individual frame one at a time has no problems.

Interestingly if I increase the number of points in the initial mesh to a much higher number, although renders take longer, it doesn't crash. It only seems to happen when the render is happening very quickly, doing many frames per second.

Geo_Node_Bug.blend

Geo_Node_Bug.crash.txt

blender_debug_output.txt

blender_system_info.txt

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-26 01:28, hash: `758c2210ae` Worked: Unknown **Short description of error** Blender crashes when rendering animation from geometry nodes on the attached .blend file. **Exact steps for others to reproduce the error** *Open attached .blend file. *Render Animation This file uses geometry nodes to take a grid of points and translate them using the Mandelbulb formula with an increasing N driven by the frame number. When I try to render animation, it consistently crashes after a few frames. Playback in the viewport and rendering an individual frame one at a time has no problems. Interestingly if I increase the number of points in the initial mesh to a much higher number, although renders take longer, it doesn't crash. It only seems to happen when the render is happening very quickly, doing many frames per second. [Geo_Node_Bug.blend](https://archive.blender.org/developer/F9910843/Geo_Node_Bug.blend) [Geo_Node_Bug.crash.txt](https://archive.blender.org/developer/F9910844/Geo_Node_Bug.crash.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9910846/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9910847/blender_system_info.txt)
Author

Added subscriber: @jims_mind

Added subscriber: @jims_mind

This issue was referenced by fa1569a072

This issue was referenced by fa1569a072ad78c8a9c037a46a6581692729d6cc
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jacques Lucke self-assigned this 2021-03-29 10:15:20 +02:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86966
No description provided.